# ta-crawler

./: .gitignore  Dockerfile  README.md  __init__.py  check_config.py  config.py  const.py  logger.py  main.py  pyproject.toml  run.py  server.py  start.sh  stop.sh  test.py
dao/: AsyncpgPgClient.py  PsycopgPgClient.py  TradebotDatabaseManagerAsync.py  __init__.py
dto/: __init__.py  requests.py  responses.py
po/: ArticlePo.py  BasePo.py  FlashNewsPo.py  SearchResultPo.py  __init__.py
source/: ArticleFetcherFacade.py  FlashNewsFetcherFacade.py  SearcherFacade.py  __init__.py  types.py
source/article_fetcher/: ArticleFetcher.py  ChainCatcherArticleFetcher.py  GlassnodeArticleFetcher.py  __init__.py
source/flash_news_fetcher/: ChainCatcherFlashNewsFetcher.py  FinnHubFlashNewsFetcher.py  FlashNewsFetcher.py  WallstreetCnFlashNewsFetcher.py  __init__.py
source/searcher/: OpenrouterSearcher.py  PerplexitySearcher.py  Searcher.py  __init__.py
static/prompt/: perplexity_search_sys.md
