[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp[speedups]>=3.13.2",
    "apscheduler==3.11.0",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.13.5",
    "langchain>=1.0.8",
    "langchain-openai>=1.0.3",
    "perplexityai>=0.16.0",
    "starlette>=0.49.0",
    "uvicorn>=0.38.0",
]
